welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:71: error: Unmatched closing brace '}' ignored here
}
^